# CivitAI-Download-Helper

./: .gitignore  Cargo.toml  LICENSE
src/: const.rs  main.rs  utils.rs
