[package]
name = "normal_download"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = [] }
futures-util = { version = "0.3.28", features = [] }
indicatif = { version = "0.17.6", features = [] }
sha256 = { version = "1.3.0", features = [] }
log = { version = "0.4.19", features = [] }
log4rs = { version = "1.2.0", features = [] }

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true
codegen-units = 1
panic = "abort"